SimpleFlask/service-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-flask
  labels:
    app: simple-flask
spec:
  selector:
    app: simple-flask
  ports:
    - name: http
      port: 5080
      targetPort: 5080
  type: LoadBalancer
