SimpleFlask/istio-gw.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: simple-flask
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "simple-flask.lab.local"
