SimpleFlask/istio-tls-gw.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: simple-flask
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: simple-flask-tls
    hosts:
    - "simple-flask.lab.local"
