SimpleFlask/istio-dr-existing-cookie.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: simple-flask
spec:
  host: simple-flask.lab.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: session
