SimpleFlask/istio-tls-vs.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: simple-flask
spec:
  hosts:
  - "simple-flask.lab.local"
  gateways:
  - simple-flask
  http:
  - route:
    - destination:
        host: simple-flask.lab.svc.cluster.local
        port:
          number: 5080
